# CleanWaveDNS

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  blocklist
.github/: README.md
.github/workflows/: cmake-multi-platform.yml
src/: BlockList.h  CMakeLists.txt  CWP.cpp  CWP.h  Colors.h  ConsoleUtils.h  main.cpp
src/private/: BlockList.cpp  CWP.cpp
src/public/: BlockList.h  CWP.h
